# ferric

./: .gitignore  Cargo.toml  README.md  install.sh
presets/: 01 Tape Slap.ferric  02 Dub Throw.ferric  03 Eighth Ping-Pong.ferric  04 Wide Tape Echo.ferric  05 Worn Cassette.ferric  06 Runaway Tape.ferric  07 Reverse Swells.ferric  08 Tape Chorus.ferric  09 Tape Flanger.ferric  10 Triplet Bounce.ferric  11 Ambient Wash.ferric  12 Lo-Fi Cloud.ferric  13 Sixteenth Digital.ferric  14 Telephone Echo.ferric  15 Half-Note Canyon.ferric  16 Stereo Doubler.ferric
src/: editor.css  editor.rs  engine.rs  lib.rs  preset.rs  state.rs
